fixed titles that were not showing up

--- a/styles.css
+++ b/styles.css
@@ -316,8 +316,7 @@ h6 {
   background-color: #961f35;
   width: 100%;
   max-width: 1300px;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-bottom: 50px;
 }
 
 .mailChimp__student__text__content {
@@ -327,36 +326,23 @@ h6 {
 
 .mailChimp__student__text__content h1 {
   text-align: center;
-  font-size: 3rem;
   background-color: #fff;
-  /* background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%); */
   background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
   padding-bottom: 20px;
   padding-top: 50px;
 }
 
 .mailChimp__student__text__content h2 {
   text-align: center;
-  font-size: 2.5rem;
   margin-top: 10px;
   background-color: #141414;
-  /* background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%); */
   background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
 }
 
 .mailChimp__student__text__content p {
   color: #141414;
   text-align: center;
   margin-top: 1rem;
-  font-size: 1.5rem;
   font-weight: 700;
   padding-bottom: 50px;
 }
@@ -765,7 +751,7 @@ h6 {
 }
 
 .current__board__container__header h1 {
-  font-size: 3rem;
+  background-color: #961f35;
   font-weight: bold;
 }
 
@@ -1449,16 +1435,14 @@ h6 {
 }
 
 .professional__development__container__title h1 {
-  padding: 25px 25px;
-  color: #fff;
-  font-size: 4rem;
+  padding: 50px 25px;
+  background-color: #fff;
   font-weight: bold;
   text-align: center;
 }
 
 .professional__development__container__title h2 {
-  color: #fff;
-  font-size: 2rem;
+  background-color: #fff;
   font-weight: bold;
   text-align: center;
 }
@@ -1504,7 +1488,6 @@ h6 {
 .socialMedia__btn {
   font-size: 3rem;
   background-color: #fff;
-  /* background-image: linear-gradient(to top, #961f35 0%, #fe5196 100%);  this is if I wanted to gradient this box */
   padding: 8px 8px;
   border: none;
   border-radius: 6px;
@@ -1527,8 +1510,7 @@ h6 {
 }
 
 .socialMedia__container h1 {
-  font-size: 4rem;
-  color: #fff;
+  background-color: #fff;
 }
 
 .socialMedia__container h2 {
@@ -2085,21 +2067,18 @@ h6 {
   padding-bottom: 25px;
 }
 .donation-conainter h1 {
-  font-size: 3rem;
-  color: #961f35;
+  background-color: #961f35;
   padding-bottom: 25px;
 }
 
 .donation-conainter h2 {
-  font-size: 1.5rem;
-  color: grey;
+  background-color: grey;
   padding-bottom: 15px;
   text-align: left;
 }
 
 .donation-conainter h3 {
-  font-size: 1.5rem;
-  color: #961f35;
+  background-color: #961f35;
   padding-bottom: 15px;
   text-align: left;
 }
